最后还是舍弃了http，用了flask

--- a/site/manage.html
+++ b/site/manage.html
@@ -34,7 +34,7 @@
 	<h2>访问日志</h2>
 	<div id="logs">加载日志中...</div>		<!--一样，创造了一个容器存放日志内容-->
 	<button onclick="loadLogs()">刷新日志</button>
-	<script src="script.js"></script>
+	<script src="manage.js"></script>
 	
 	
 </body>
