--- a/static/admin.html
+++ b/static/admin.html
@@ -31,9 +31,11 @@
 	
 	
 	<div id="status">加载状态中...</div>	<!--创造了一个status容器用来存放服务器状态-->
-	<h2>访问日志</h2>
-	<div id="logs">加载日志中...</div>		<!--一样，创造了一个容器存放日志内容-->
-	<button onclick="loadLogs()">刷新日志</button>
+	<div class="log-controls">
+		<h2><span id="log-type-indicator">管理日志</span> <button onclick="switchLogType('admin')">管理日志</button> <button onclick="switchLogType('debug')">调试日志</button></h2>
+		<button onclick="loadLogs()">刷新日志</button>
+	</div>
+	<div id="logs">加载日志中...</div>		<!--创造了一个容器存放日志内容-->
 	<script src="admin.js"></script>
 	
 	
