--- a/static/index.html
+++ b/static/index.html
@@ -35,14 +35,11 @@
             <ul>
                 <li>用户登录与注册</li>
                 <li>主题切换（白天/黑夜模式）</li>
-                <li>管理员日志查看</li>
-                <li>调试日志查看</li>
-                <li>服务器状态监控</li>
+                <li>个人信息查看</li>
             </ul>
         </div>
         
         <div class="nav-buttons">
-            <button onclick="window.location.href='/admin'">进入管理页面</button>
             <button onclick="window.location.href='/'">返回登录页</button>
         </div>
     </div>
