修复了黑夜模式的一个bug
管理端日志底和字都是白的，这个不太好

--- a/static/admin.html
+++ b/static/admin.html
@@ -68,6 +68,7 @@
 	<div class="top-buttons">
 	<button onclick="setTheme('light.css')">白天模式</button>
 	<button onclick="setTheme('dark.css')">黑夜模式</button>
+	<button onclick="clearCache()">清除缓存</button>
 	</div>
 	<script src="theme.js"></script>
 	
