增加了学术资源这个模块

--- a/static/index.html
+++ b/static/index.html
@@ -36,10 +36,14 @@
                 <li>用户登录与注册</li>
                 <li>主题切换（白天/黑夜模式）</li>
                 <li>个人信息查看</li>
+                <li>学术资源库管理</li>
             </ul>
         </div>
         
         <div class="nav-buttons">
+            <button onclick="window.location.href='/academic'" style="background: #007bff; color: white; margin-right: 10px;">
+                📚 学术资源库
+            </button>
             <button onclick="window.location.href='/'">返回登录页</button>
         </div>
     </div>
